--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SATISFY</title>
-    <!--<link rel="icon" type="image/x-icon" href="x">-->
+    <link rel="icon" type="image/x-icon" href="./equal.ico">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
