credited myself ofc

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <p />
         <div id="path"></div>
     </div>
+    <footer>
+        This game was made by <a href="toxicscientist.github.io">Nerdopedia</a>
+    </footer>
 </body>
 <script defer="true" src="./script.js"></script>
 </html>
