--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="path"></div>
     </div>
     <footer>
-        This game was made by <a href="toxicscientist.github.io/index.html">Nerdopedia</a>
+        This game was made by <a href="https://toxicscientist.github.io/">Nerdopedia</a>
     </footer>
 </body>
 <script defer="true" src="./script.js"></script>
