--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="c"></div>
     <div id="highscore"></div>
     <div id="container">
-        <h1>SATISFY</h1>
+        <h1>SATISFY<span style="font-size: 60%;">1.1.0</span></h1>
         <div id="tutorial">
             <span style="text-decoration: underline; font-weight: 800;">How it works:</span><p>
                 - Add a number to the one given to give a new number that satisfies the given condition<p>
@@ -26,7 +26,7 @@
         <p />
         <div id="path"></div>
     </div>
-    <footer>
+    <footer id="footer">
         This game was made by <a href="https://toxicscientist.github.io/">Nerdopedia</a>
     </footer>
 </body>
